# CipherBreaker

./: .gitattributes  LICENSE.md  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cz/civilizacehra/cipherbreaker/: ExampleInstrumentedTest.kt
app/src/debug/res/values/: google_maps_api.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Brno.cbmap  Czechia.cbmap  Prague.cbmap  cs.canon  cs_CZ_openoffice.canon  en.canon  holidays.txt  map_brno.sifrohal  map_prague.sifrohal  podst_jm_cz.canon  sorted.canon  svatky.txt
app/src/main/cpp/: MrizkoDrtic.cpp  MrizkoDrtic.h  Trie.cpp  Trie.h  drtic-lib.cpp
app/src/main/java/cz/civilizacehra/cipherbreaker/: AboutActivity.kt  AzimutherActivity.java  AzimutherActivity.kt  BasePrincipActivity.kt  CalendarActivity.java  CalendarActivity.kt  DebaseatorActivity.java  DebaseatorActivity.kt  DebinarizatorActivity.java  DebinarizatorActivity.kt  DeternarizatorActivity.java  Dictionary.java  (+27 more)
app/src/main/res/drawable/: ic_email.xml  ic_github.xml  ic_playfair.xml  ic_prime.xml
app/src/main/res/layout/: activity_about.xml  activity_azimuther.xml  activity_calendar.xml  activity_debinarizator.xml  activity_deternarizator.xml  activity_griller.xml  activity_item.xml  activity_main.xml  activity_mrizko_drtic.xml  activity_pick_from_map.xml  activity_playfair.xml  activity_presmyslovnik.xml  activity_prime.xml  activity_princip_reader.xml  activity_princip_trainer.xml  binaryrow.xml  primerow.xml  ternaryrow.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/release/res/values/: google_maps_api.xml
(+8 files in other folders)
